# HPI-personal

./: README.md  install  pyproject.toml  setup.py
jobs/all/: backup_bash.job  backup_browser_history.job  backup_browser_history.job.disabled  backup_ipython.job  backup_ipython.job.disabled  backup_zsh_history.job  cache_zsh_history.job  doctor_snapshot.job  minecraft_advancements.job  minecraft_advancements.job.disabled  runelite_screenshots.job
jobs/android/: backup_aw_window_watcher.job  backup_twistytimer.job  phone_bleanser.job
jobs/computer/: backup_browser_history.job  minecraft_advancements.job
jobs/linux/: backup_albums.job  backup_bash_server_history.job  backup_chess.job  backup_garmin.job.disabled  backup_ghexport.job  backup_git_doc_history.job  backup_listenbrainz.job  backup_newsboat.job  backup_rexport.job  backup_stexport.job  backup_todotxt.job  backup_trakt.job  bleanser.job  last_export_dates.job  move_cubers_io.job  where_db.job  where_on.job  zip_malexport.job
jobs/linux/arch/: backup_albums.job  backup_chess.job  backup_listenbrainz.job  backup_trakt.job  backup_trakt_partial.job
jobs/linux/arch/fw/: backup_chess.job  backup_ghexport.job  backup_stexport.job  backup_trakt.job  last_export_dates.job  move_cubers_io.job  refresh_tz_cache.job  zip_malexport.job
jobs/linux/arch/io/: backup_chess.job  (+1 more)
jobs/mac/: backup_imessages.job  backup_safari_history.job
my/: __init__disabled.py  mint.py  nextalbums.py  old_forums.py
my/ip/: __main__.py  all.py
my/location/: all.py  where_db.py
my/util/: iter.py
scripts/: abook-populate  active-browser-github  at-home  backup-cubing  backup-minecraft-advancements  backup_minecraft_advancements  browser-github  check-trakt-ratings  common_netlocs  current-timezone  dedupe_ghexport  discord-download-attachments  discord_download_attachments  distance-to  events-generate  fc-all-zsh-history  find-broken-zsh-files  functions.sh  fzf_history_widget.zsh  history_fzf  is-hpi-bash-format  is_hpi_bash_format  last-export-dates  last-gps-location  last_gps_location  listens  location-tag  mal-milestones  mal-order  mal-shortest  malexport_partial_update  mpv-clean-priv-frames  mpv-most-skipped  mpv-timestamped  mpv_clean_priv_frames  mpv_most_skipped  next-broken-activitywatch-file  offline-listens-source  parse-zsh-history  recent-history  (+13 more)
