[project]
name = "HPI-purarue-personal"
version = "0.0.1"
description = "Personal HPI modules"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

[[project.authors]]
name = "purarue"

[project.urls]
Homepage = "https://github.com/purarue/HPI-personal"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
pretty = "True"
show_error_context = "True"
show_error_codes = "True"
check_untyped_defs = "True"
namespace_packages = "True"
disallow_incomplete_defs = "True"
no_implicit_optional = "True"
disallow_any_generics = "True"
disallow_untyped_calls = "True"
warn_redundant_casts = "True"
warn_return_any = "True"
warn_unreachable = "True"

[options.package_data]
my = "py.typed"

[tool.setuptools.packages.find]
where = ["."]
include = ["my*"]
exclude = []
namespaces = true
