[project]
name = "HPI-purarue-personal"
version = "0.0.1"
description = "Personal HPI modules"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

[[project.authors]]
name = "purarue"

[project.urls]
Homepage = "https://github.com/purarue/HPI-personal"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
pretty = true
show_error_context = true
show_error_codes = true
check_untyped_defs = true
namespace_packages = true
disallow_incomplete_defs = true
no_implicit_optional = true
disallow_any_generics = true
disallow_untyped_calls = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

[options.package_data]
my = "py.typed"

[tool.setuptools.packages.find]
where = ["."]
include = ["my*"]
exclude = []
namespaces = true
